# orate

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
bench/: measure_legal_steps.py  probe_constraint_strategies.py
bench/bbh/: __init__.py  constraint_parser.py  debug_orate.py  extractor.py  loader.py  ordering.py  programs.py  prompts.py  report.py  run_baseline.py  run_combined.py  run_oracle.py  run_orate.py
bench/results/: act3_full_2026-04-25_2330.md  act4_meta_finisher_2026-04-25_1515.md  bbh_baseline_logical_deduction_five_objects_2026-04-25_baseline.json  bbh_baseline_logical_deduction_seven_objects_2026-04-26_morning.json  (+19 more)
docs/: flavor_b_status.md  overnight_status.md  project_overview.md  video_explorations.md  video_production_handover.md  video_production_status.md  video_script.md
examples/: README.md  act_01_schema_breaks.py  act_02_predicate_fixes.py  act_03_unified_yield.py  act_04_arc_sketch.py  smoke_layer_1234.py  smoke_local.py  smoke_meta.py  smoke_session.py  trace_retry.py
tests/: test_alternative.py  test_arc_data.py  test_arc_dsl.py  test_arc_solve.py  test_body_grammar.py  test_compile.py  test_flavor_b.py  test_gen_against_local.py  test_gen_primitives.py  test_kernel.py  test_legal_step_checkers.py  test_legal_step_programs.py  test_meta.py  test_meta_orchestrator.py  test_meta_predicates.py  test_phase_bc.py  test_prompt.py  test_resolver_return.py  test_session_mode.py  test_session_modes_typed.py  test_stress.py  test_verify.py  test_xgrammar_engine.py
video/: .gitignore  README.md  feedback_apr25_pm.md
(+48 files in other folders)
