[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orate"
version = "0.0.1"
description = "Programmatic decoding over local LLM inference — structured output is the trivial case."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Malte Landgren" }]
keywords = ["llm", "structured-output", "grammar", "decoding", "program-synthesis"]

dependencies = []

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3",
    "xgrammar>=0.1",
    "transformers>=4.44",
]
api = [
    "anthropic>=0.40",
]
arc = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/maltelandgren/orate"

[tool.hatch.build.targets.wheel]
packages = ["src/orate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
